# web-scrape-mansion

./: .eslintrc-auto-import.json  .gitignore  .prettierrc.json  Cargo.toml  README.md  bookmarks.html  database.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.mts  vite.config.mts.timestamp-1740239974465-0d54009adc35b.mjs  vite.config.ts
.github/workflows/: app_builder.yml  publish.yml  release.yml
mansions/: eslint.config.js  package-lock.json  tailwind.config.js
mansions/src/: App.vue  components.d.ts  typed-router.d.ts
mansions/src-tauri/: tauri.conf.json
mansions/src/components/mansion/: Info.vue
mansions/src/components/navigation/: NavBar.vue
mansions/src/components/user/: LoginFIXME.vue
mansions/src/layouts/: default.vue
mansions/src/pages/: mansion.vue
mansions/src/pages/user/: login.vue
mansions/src/plugins/: vuetify.ts
sql_notes/: data.md  databases.md  tables.md
src/: App.vue  bindings.ts  components.d.ts  links.rs  main.rs  main.ts  test.rs  typed-router.d.ts
src-tauri/: .env  Cargo.toml  README.md  diesel.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/2024-12-31-064249_create_mansions/: down.sql  up.sql
src-tauri/migrations/2024-12-31-100931_edit_mansions/: down.sql  up.sql
src-tauri/migrations/2024-12-31-100945_create_images/: up.sql
src-tauri/migrations/2025-02-15-034224_create_mansions/: up.sql
src-tauri/migrations/2025-02-15-034925_add_pictures/: down.sql  up.sql
src-tauri/migrations/2025-02-23-010205_uuid/: down.sql  up.sql
src-tauri/migrations/2025-03-02-021554_settings/: up.sql
src-tauri/migrations/2025-03-29-164834_create_mansions/: up.sql
src-tauri/migrations/2025-04-10-010820_mansionees/: down.sql  up.sql
src-tauri/migrations/2025-04-10-011746_pictures/: down.sql  up.sql
src-tauri/migrations/2025-04-10-013249_settings/: up.sql
src-tauri/src/: README.md  lib.rs  links.rs  main.rs  main2.rs  scraper.rs
src-tauri/src/database/: README.md  mansion.rs  mod.rs  models.rs  postgresql.rs  schema.rs  sqlite.rs
src-tauri/src/scrape/: action.rs  errors.rs  mod.rs  scrape.rs
src-tauri/src/store/: bucket.rs
src/components/: HelloWorld.vue  Navbar.vue
src/components/dev/: Counter.vue
src/components/mansion/: AddMansionFIXME.vue  AllMansions.vue  Info.vue  Mansion.vue  MansionImages.vue  MansionInfo.vue  MnasionDescription.vue  Pictures.vue
src/components/mansion/info-helper/: Entry.vue
src/components/navigation/: NavBar.vue
src/components/user/: DataSettings.vue  LoginFIXME.vue  RegisterFIXME.vue  Settings.vue
src/components/user/settings/: Settings.vue
src/components/user/settings/sub-sections/: AppearanceSettings.vue  DataSettings.vue  SettingsBar.vue
src/database/: sql.rs
src/layouts/: default.vue
src/pages/: about.vue  add-mansion.vue
src/pages/mansions/: [id].vue  index.vue
src/pages/user/: register.vue
src/plugins/: CustomThemes.ts  index.ts  vuetify.ts
src/scrape/: action.rs  mod.rs  save.rs  scrape.rs
src/stores/: userStore.ts
src/types/: types.ts
src/views/: Home.vue  Mansions.vue  services.vue
vuetify-project/: package-lock.json
