[package]
name = "web-scrape-mansion"
version = "0.1.0"
edition = "2021"

[dependencies]
thirtyfour = "0.32.0"
tokio = "1.38.0"
webdriver-install = "0.3.2"
image = "0.25.1"
reqwest = { version = "0.12.5", features = ["blocking"] }
scraper = "0.20.0"
regex = "1.10.6"
base64 = "0.22.1"
mysql = "25.0.1"
