[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.82.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.0-rc.15", features = [] }
tauri-plugin-log = "2.0.0-rc"
thirtyfour = "0.32.0"
tokio = "1.38.0"
webdriver-install = "0.3.2"
image = "0.25.1"
reqwest = { version = "0.12.5", features = ["blocking"] }
scraper = "0.20.0"
regex = "1.10.6"
base64 = "0.22.1"
dotenv_codegen = "0.15.0"
dotenv = "0.15.0"
async-recursion = "1.1.1"
tauri-plugin-store = "2"
specta = "=2.0.0-rc.20"
specta-typescript = "0.0.7"
tauri-specta = { version = "=2.0.0-rc.20", features = ["derive", "typescript"] }
diesel = { version = "2.2.4", features = ["postgres", "serde_json"] }
